SFDC Automation/src/objects/RSM_Sales_Qus__c.object
<CustomObject>
    <description>To Store RydeSmart Pre-Launch Customer Information</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number</description>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Customer_RydeSmart_Locations__c</fullName>
        <label>Additional Customer RydeSmart Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Pertinent_Information__c</fullName>
        <description>Additional, Pertinent Information:</description>
        <label>Additional, Pertinent Information:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_there_any_shop_specific_information__c</fullName>
        <description>Are there any shop specific information you can share regarding this RydeSmart implementation and ongoing support?</description>
        <label>Are there any shop specific information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPU_Phone__c</fullName>
        <description>Customer Primary User - Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CPU_Title__c</fullName>
        <description>Customer Primary User - Title</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_the_RS_Account_Manager_contact_the_c__c</fullName>
        <description>Can the RS Account Manager contact the customer directly or do you require a warm introduction to the customer?</description>
        <label>Can the RS Account Manager contact the c</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RSM Sales Questionnaires</relationshipLabel>
        <relationshipName>RSM_Sales_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Industry_Business__c</fullName>
        <label>Customer Industry / Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM Sales Questionnaires</relationshipLabel>
        <relationshipName>RSM_Sales_Questionnaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Primary_RydeSmart_Location__c</fullName>
        <label>Customer Primary RydeSmart Location:</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Primary_User__c</fullName>
        <label>Customer Primary User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_RydeSmart_Owner__c</fullName>
        <label>Customer RydeSmart Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Some_or_All_Drivers_Use_the_Same_Truc__c</fullName>
        <description>Do Some or All Drivers Use the Same Truck Every Day?</description>
        <label>Do Some or All Drivers Use the Same Truc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_customer_have_specific_ROI_goal__c</fullName>
        <description>Does the customer have specific ROI goals involving RydeSmart?</description>
        <label>Does the customer have specific ROI goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Customer RydeSmart Owner - Email Address</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Customer Primary User - Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>How_does_the_customer_intend_to_use_Ryde__c</fullName>
        <description>How does the customer intend to use RydeSmart; will they be using any other logistic tools in conjunction with RydeSmart?</description>
        <label>How does the customer intend to use Ryde</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_Haul__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Long Haul</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Sales Persons phone number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>RS Customer Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Please_describe_potential_for_additional__c</fullName>
        <description>Please describe potential for additional RydeSmart business, if any</description>
        <label>Please describe potential for additional</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_describe_the_customer_previous_Te__c</fullName>
        <description>Please describe the customer previous Telematics experience to include provider, if any</description>
        <label>Please describe the customer previous Te</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_describe_the_customer_s_normal_op__c</fullName>
        <description>Please describe the customer’s normal operation of their trucks to include route information, back hauls, etc.</description>
        <label>Please describe the customer’s normal op</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Person Name</description>
        <label>Sales Person Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RSM_Sales_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Haul__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Short Haul</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slip_Seating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slip Seating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Drivers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Drivers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Customer RydeSmart Owner - Title</description>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>RSM Sales Questionnaire</label>
    <nameField>
        <label>RSM Sales Qus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Sales Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>